<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MidtermPreview</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="original_text_view">Original Text</string>
    <string name="enter_text_here_hint">Enter Text Here</string>
    <string name="rotation_text_view">Rotation Value</string>
    <string name="seek_value_text_view">4</string>
    <string name="button_view">Cipher Text</string>

</resources>
