<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mandiecohoon.midtermpreview.MainActivity" >

    <TextView
        android:id="@+id/inputTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/original_text_view"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/inputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/enter_text_here_hint" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/seekBarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotation_text_view"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="12dp" />

    <LinearLayout
        android:id="@+id/seekBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <SeekBar
            android:id="@+id/rotSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="25"
            android:progress="4" />

        <TextView
            android:id="@+id/rotTextView"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/seek_value_text_view"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/outputButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_view" />

    <EditText
        android:id="@+id/outputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:longClickable="false" />

</LinearLayout>
